👌 fix: Add overflow on connection page

--- a/app/src/presentation/components/contents/ConnectionContent.module.css
+++ b/app/src/presentation/components/contents/ConnectionContent.module.css
@@ -29,6 +29,7 @@
     height: 100vh;
     box-sizing: border-box;
     padding: 20px;
+    overflow-y: auto;
 }
 
 .signup-div {
